2011-02-08  Martin Robinson  <mrobinson@igalia.com>

        Unskip a bunch of tests that are passing locally and move one
        timeout with the other timeouts.

        * platform/gtk/Skipped: Unskip some passing tests.

2011-02-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] EventSender.keyDown does not support non-array modifier arguments
        https://bugs.webkit.org/show_bug.cgi?id=53962

        * platform/gtk/Skipped: Unskip a test which is now passing.

2011-02-08  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed. Removing inspector tests from Skipped on [win].
        Resource tracking has been removed since then, maybe it'll help.

        * platform/win/Skipped:

2011-02-08  Martin Robinson  <mrobinson@igalia.com>

        Clean up the skipped list slightly and unskip a test which should now be passing.

        * platform/gtk/Skipped: Clean up.

2011-02-08  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: re-apply r77924.

        Test: inspector/console-api-on-call-frame.html

        * inspector/console-api-on-call-frame-expected.txt: Added.
        * inspector/console-api-on-call-frame.html: Added.
        * inspector/debugger-pause-in-eval-script-expected.txt:

2011-02-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r77924.
        http://trac.webkit.org/changeset/77924
        https://bugs.webkit.org/show_bug.cgi?id=53997

        Breaks inspector tests. (Requested by pfeldman on #webkit).

        * inspector/console-api-on-call-frame-expected.txt: Removed.
        * inspector/console-api-on-call-frame.html: Removed.

2011-02-08  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: do not hide scope variables with command line api.
        https://bugs.webkit.org/show_bug.cgi?id=53497

        * inspector/console-api-on-call-frame-expected.txt: Added.