@@ -13,7 +13,8 @@ function editingTest() {
 }
 </script>
 
-<body>
+<body onload="runEditingTest();">
+
 <div id="test" contentEditable style="word-wrap: break-word; -khtml-nbsp-mode: space; -khtml-line-break: after-white-space;">
 
 <DIV class=3D"AppleOriginalContents"><DIV>On Feb 1, 2006, at 7:37 PM, David Hyatt wrote:</DIV><BR class=3D"Apple-interchange-newline"><BLOCKQUOTE type=3D"cite"><DIV
@@ -43,10 +44,6 @@ margin-left: 0px; ">dave</DIV><DIV style=3D"margin-top: 0px;
 margin-right: 0px; margin-bottom: 0px; margin-left: 0px;
 ">(hyatt@apple.com)</DIV><DIV style=3D"margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; min-height: 14px;"><BR></DIV> </BLOCKQUOTE></DIV><BR>
 </div>
-
-<script>
-runEditingTest();
-</script>
 
 </body>
 </html>
