@@ -1,3 +1,15 @@
+2011-02-08  Mario Sanchez Prada  <msanchez@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        editing/selection/end-of-document.html is failing in the GTK 64-bit debug bot
+        https://bugs.webkit.org/show_bug.cgi?id=53995
+
+        Ensure to wait for the body to be loaded before running the test.
+
+        * editing/selection/end-of-document.html: Call runEditingTest() on
+        the body.onload event.
+
 2011-02-08  Martin Robinson  <mrobinson@igalia.com>
 
         Unskip a bunch of tests that are passing locally and move one
